Test & Demo Log/TwoPlayers Mode demo/bad demo with bugs/TwoPlayers demo 3_bad
Last login: Tue May 15 12:05:42 on ttys000
Hongyous-MacBook-Pro-3:~ hongyoulin$ python /Users/hongyoulin/Desktop/CMSC\ H106\ Final\ Project/Main.py 
Traceback (most recent call last):
  File "/Users/hongyoulin/Desktop/CMSC H106 Final Project/Main.py", line 2, in <module>
    from twoPlayers import TwoPlayers
  File "/Users/hongyoulin/Desktop/CMSC H106 Final Project/twoPlayers.py", line 19
    if checkerboard.LegalCapture(f,t) 
                                     ^
SyntaxError: invalid syntax
Hongyous-MacBook-Pro-3:~ hongyoulin$ clear











Hongyous-MacBook-Pro-3:~ hongyoulin$ python /Users/hongyoulin/Desktop/CMSC\ H106\ Final\ Project/Main.py 
Welcome to checkers. Please input A for two players mode and B for single player mode: A
Enter the name for the player who will go first: a
Enter the name for the player who will go second: b
Game start! a goes first, and please uses the chess pieces label as 1; b goes second, and please uses the chess piece labeled -1.
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 1 0 1 0 1   3
 0 0 0 0 0 0 0 0   4
 0 0 0 0 0 0 0 0   5
-1 0-1 0-1 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

a choose the piece that you want to move: (3,6)
Where do you want to move the piece to: (4,7)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 1 0 0 0 1   3
 0 0 0 0 0 0 1 0   4
 0 0 0 0 0 0 0 0   5
-1 0-1 0-1 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

b, choose the piece that you want to move: (6,5)
Where do you want to move the piece to: ((5,4)
Illegal move! Do it again.
b, choose the piece that you want to move: (6,5)
Where do you want to move the piece to: (6,6)
Illegal move! Do it again.
b, choose the piece that you want to move: (6,5)
Where do you want to move the piece to: (5,4)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 1 0 0 0 1   3
 0 0 0 0 0 0 1 0   4
 0 0 0-1 0 0 0 0   5
-1 0-1 0 0 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

a choose the piece that you want to move: (3,4)
Where do you want to move the piece to: (4,3)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 0 0 0 0 1   3
 0 0 1 0 0 0 1 0   4
 0 0 0-1 0 0 0 0   5
-1 0-1 0 0 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

b, choose the piece that you want to move: (6,3)
Where do you want to move the piece to: (5,2)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 0 0 0 0 1   3
 0 0 1 0 0 0 1 0   4
 0-1 0-1 0 0 0 0   5
-1 0 0 0 0 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

a choose the piece that you want to move: (4,3)
Where do you want to move the piece to: ((6,5)
Illegal move! Do it again.
a choose the piece that you want to move: (4,3)
Where do you want to move the piece to: (6,5)
You have more than 2 captures avaiable, please continue with the previous chess piece.
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 0 0 0 0 1   3
 0 0 0 0 0 0 1 0   4
 0-1 0 0 0 0 0 0   5
-1 0 0 0 1 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 0 0 0 0 1   3
 0 0 0 0 0 0 1 0   4
 0-1 0 0 0 0 0 0   5
-1 0 0 0 1 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

b, choose the piece that you want to move: (5,2)
Where do you want to move the piece to: (4,3)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 1 0 1 0   2
 0 1 0 0 0 0 0 1   3
 0 0-1 0 0 0 1 0   4
 0 0 0 0 0 0 0 0   5
-1 0 0 0 1 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

a choose the piece that you want to move: (2,5)
Where do you want to move the piece to: (3,4)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 0 0 1 0   2
 0 1 0 1 0 0 0 1   3
 0 0-1 0 0 0 1 0   4
 0 0 0 0 0 0 0 0   5
-1 0 0 0 1 0-1 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

b, choose the piece that you want to move: (6,7)
Where do you want to move the piece to: (5,8)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 0 0 1 0   2
 0 1 0 1 0 0 0 1   3
 0 0-1 0 0 0 1 0   4
 0 0 0 0 0 0 0-1   5
-1 0 0 0 1 0 0 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

a choose the piece that you want to move: (3,4)
Where do you want to move the piece to: (4,5)
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 0 0 1 0   2
 0 1 0 0 0 0 0 1   3
 0 0-1 0 1 0 1 0   4
 0 0 0 0 0 0 0-1   5
-1 0 0 0 1 0 0 0   6
 0-1 0-1 0-1 0-1   7
-1 0-1 0-1 0-1 0   8

b, choose the piece that you want to move: (7,6)
Where do you want to move the piece to: (5,4)    
You have more than 2 captures avaiable, please continue with the previous chess piece.
 1 2 3 4 5 6 7 8

 0 1 0 1 0 1 0 1   1
 1 0 1 0 0 0 1 0   2
 0 1 0 0 0 0 0 1   3
 0 0-1 0 1 0 1 0   4
 0 0 0-1 0 0 0-1   5
-1 0 0 0 0 0 0 0   6
 0-1 0-1 0 0 0-1   7
-1 0-1 0-1 0-1 0   8

Where do you want to move the piece to: (4,3)
Traceback (most recent call last):
  File "/Users/hongyoulin/Desktop/CMSC H106 Final Project/Main.py", line 17, in <module>
    twoPlayersGame.gameProcess(game)
  File "/Users/hongyoulin/Desktop/CMSC H106 Final Project/twoPlayers.py", line 57, in gameProcess
    self.checkCaptureOrMove(checkerGame,f2,t2)
  File "/Users/hongyoulin/Desktop/CMSC H106 Final Project/twoPlayers.py", line 26, in checkCaptureOrMove
    while len(newt)!=5 or newt[0]!='(' or newt[2]!=',' or newt[4]!=')' or not newt[1].isdigit() or not newt[3].isdigit() or not checkerboard.LegalMove((int(newf[1])-1, int(newf[3])-1),(int(newt[1])-1, int(newt[3])-1)):
IndexError: tuple index out of range
Hongyous-MacBook-Pro-3:~ hongyoulin$ 
